<resources>
	<string name="app_name">Банковская система</string>

	<string name="login">Логин</string>
	<string name="password">Пароль</string>
	<string name="sign_in">Войти</string>

	<string name="tariffs">Тарифы</string>
	<string name="tariff">Тариф</string>
	<string name="rate">Ставка, проценты</string>
	<string name="min_sum">Минимальная сумма, руб</string>
	<string name="max_sum">Максимальная сумма, руб</string>
	<string name="min_term">Минимальный срок, месяцы</string>
	<string name="max_term">Максимальный срок, месяцы</string>
	<string name="client_tariffs">Тарифы клиента</string>
	<string name="give_tariff_client">Присвоить новый тариф клиенту</string>
	<string name="input_name_tariff">Введите название тарифа</string>

	<string name="credits">Кредиты</string>
	<string name="date_open">Дата открытия</string>
	<string name="term">Срок, месяцы</string>
	<string name="sum">Сумма, руб</string>
	<string name="payment_schedule">График платежей</string>
	<string name="payments">Платежи</string>
	<string name="make_payment">Внести платеж</string>
	<string name="close">Закрыт</string>
	<string name="open">Открыт</string>
	<string name="expired">Просрочен</string>
	<string name="choose_tariff">Выберите тариф:</string>
	<string name="input_sum">введите сумму</string>
	<string name="input_term">Введите срок:</string>
	<string name="from">\u0020от\u0020</string>
	<string name="to">\u0020до\u0020</string>
	<string name="format_date">в формате дд.мм.гггг</string>

	<string name="clients">Клиенты</string>
	<string name="client">Клиент</string>
	<string name="search">Поиск</string>
	<string name="search_passport">Поиск по паспорту</string>
	<string name="search_parameters">Поиск по параметрам</string>
	<string name="number_passport">Номер паспорта</string>
	<string name="fio">ФИО</string>
	<string name="year_birth">Год рождения</string>
	<string name="date_birth">Дата рождения</string>
	<string name="place">Место проживания</string>
	<string name="state_client">Состояние клиента</string>
	<string name="state">Состояние</string>
	<string name="not_tariff">Нет тарифа</string>
	<string name="not_credit">Нет кредита / есть тариф</string>
	<string name="yes_credit">Есть кредит</string>
	<string name="locked">Заблокирован</string>
	<string name="active_credit">Текущий кредит</string>
	<string name="give_credit">Выдать кредит</string>
	<string name="assign_tariff">Присвоить тариф</string>
	<string name="block">Заблокировать</string>
	<string name="unblock">Разблокировать</string>
	<string name="history_credits">История кредитов</string>
	<string name="question_count_block_days">На сколько дней заблокировать клиента?</string>
	<string name="count_days">Количество дней</string>

	<string-array name="days">
		<item>\u0020день</item>
		<item>\u0020дня</item>
		<item>\u0020дней</item>
	</string-array>

	<string name="commissions">Комиссии</string>
	<string name="commission">Комиссия</string>
	<string name="interest">Процент</string>

	<string name="not_paid">Не оплачен</string>
	<string name="paid">Оплачен</string>
	<string name="missed">Пропущен</string>
	<string name="date_payment">Дата платежа</string>

	<string name="report">Отчет</string>

	<string name="message_error">Произошла ошибка!</string>
	<string name="edit">Редактировать</string>
	<string name="delete">Удалить</string>
	<string name="save">Сохранить</string>
	<string name="cancel">Отмена</string>
</resources>