<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tariffField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/tariff"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/rateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/rate"
                android:inputType="number"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/minSumField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/min_sum"
                android:inputType="number"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/maxSumField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/max_sum"
                android:inputType="number"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/minTermField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/min_term"
                android:inputType="number"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/maxTermField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/max_term"
                android:inputType="number"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/save"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/cancel"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>