<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:text="@string/question_count_block_days"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/daysValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/count_days"
        android:inputType="number"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/block"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/cancel"
        android:textSize="16sp" />
</LinearLayout>