<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/date_open"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/rate"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/sum"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sumValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/termText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/term"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/termValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/stateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/state"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/stateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/clientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/client"
                android:textSize="16sp" />

            <Button
                android:id="@+id/paymentScheduleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/payment_schedule"
                android:textSize="16sp" />

            <Button
                android:id="@+id/paymentsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/payments"
                android:textSize="16sp" />

            <Button
                android:id="@+id/makePaymentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/make_payment"
                android:textSize="16sp" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/edit"
                android:textSize="16sp" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/delete"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>