<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fioText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/fio"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fioValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/passportText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/number_passport"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/passportValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateBirthText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/date_birth"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateBirthValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/placeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/place"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/placeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/stateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/state"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/stateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/creditButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/give_credit"
                android:textSize="16sp" />

            <Button
                android:id="@+id/tariffsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/tariffs"
                android:textSize="16sp" />

            <Button
                android:id="@+id/blockButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/block"
                android:textSize="16sp" />

            <Button
                android:id="@+id/historyCreditsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/history_credits"
                android:textSize="16sp" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/edit"
                android:textSize="16sp" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/delete"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>