<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tariffs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tariffs"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        android:paddingStart="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:paddingStart="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/clients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clients"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:paddingStart="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/commissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commissions"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:paddingStart="10dp"
        android:clickable="true"
        android:focusable="true"/>
</LinearLayout>