<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/commissionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:paddingStart="10dp"
                android:text="@string/commissions"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/commissionsRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingStart="10dp" />

            <TextView
                android:id="@+id/sumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/sum"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/sumField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/input_sum"
                android:inputType="number"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="10dp"
                android:text="@string/date_payment"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/format_date"
                android:inputType="date"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <Button
                android:id="@+id/makePaymentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/make_payment"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>