<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:text="@string/commission"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:paddingStart="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/interestText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:text="@string/interest"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/interestValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:paddingStart="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/delete"
        android:textSize="16sp" />
</LinearLayout>