<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/loginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:layout_marginTop="140dp"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        android:textSize="16sp" />
</LinearLayout>